# wb-sdk

./: .gitignore  README.md  main.py  pyproject.toml
tests/: conftest.py  test_base.py  test_exceptions.py  test_integration.py  test_reports.py  transform_aggregator.py
wb_api_sdk/: __init__.py  base.py  endpoints.py  exceptions.py  types.py
wb_api_sdk/statistic/: __init__.py  client.py  reports.py
wb_api_sdk/statistics/: __init__.py  client.py  reports.py
